--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
 		<section id="agenda">
 			<h3>Agenda de shows</h3>
       <br>
-      <p><a class="agenda" href="https://www.sympla.com.br/evento/costa-gold-e-haikaiss-na-garden/1936591" target="_blank" rel="noopener noreferrer">Garden Pub - SEX, 05 de Maio as 21h</a></p>
-      <p><a class="agenda" href="https://www.sympla.com.br/evento/costa-gold-e-haikaiss-na-garden/1961967" target="_blank" rel="noopener noreferrer">Garden Pub - SEX, 26 de Maio as 22h</a></p>
-      <p><a class="agenda" href="https://www.sympla.com.br/evento/costa-gold-e-haikaiss-na-garden/1961967" target="_blank" rel="noopener noreferrer">Monet Pub - SAB, 27 de Maio as 23h</a></p>
+      <p><a class="agenda" href="https://www.instagram.com/aleps.dev/" target="_blank" rel="noopener noreferrer">Garden Pub - SEX, 05 de Maio as 21h</a></p>
+      <p><a class="agenda" href="https://www.instagram.com/aleps.dev/" target="_blank" rel="noopener noreferrer">Garden Pub - SEX, 26 de Maio as 22h</a></p>
+      <p><a class="agenda" href="https://www.instagram.com/aleps.dev/" target="_blank" rel="noopener noreferrer">Monet Pub - SAB, 27 de Maio as 23h</a></p>
 		</section>
 
 		<section id="contato">
       <h3>Onde você pode encontrat a DJ Gaab</h3>
       <br>
       <div>
-        <a class="agenda" href="https://api.whatsapp.com/send?phone=5548999816867&text=Ol%C3%A1+Dj+Gaab%2C+quero+solicitar+meu+or%C3%A7amento" target="_blank" rel="noopener noreferrer">
+        <a class="agenda" href="https://www.instagram.com/aleps.dev/" target="_blank" rel="noopener noreferrer">
           Whatsapp
         </a>
-        <a class="agenda" href="https://www.instagram.com/dj_gaab_/" target="_blank" rel="noopener noreferrer">Instagram</a>
+        <a class="agenda" href="https://www.instagram.com/aleps.dev/" target="_blank" rel="noopener noreferrer">Instagram</a>
       </div>
 		</section>
 	</main>
